디바이스 수정, video.hardware 추가