@@ -26,8 +26,12 @@ import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.net.NetworkInterface;
 import java.net.SocketException;
+import java.nio.file.DirectoryStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -39,14 +43,20 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import javax.naming.ConfigurationException;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.nio.file.Files;
-import java.nio.file.Path;
 
 import org.apache.cloudstack.storage.command.browser.ListRbdObjectsAnswer;
 
@@ -250,7 +260,6 @@ public abstract class ServerResourceBase implements ServerResource {
             String result = cmd.execute(parser);
 
             if (result != null) {
-                logger.error("Failed to execute lsblk command: " + result);
                 return new ListHostLunDeviceAnswer(false, hostDevicesNames, hostDevicesText, hasPartitions, scsiAddresses);
             }
 
@@ -272,7 +281,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return new ListHostLunDeviceAnswer(true, hostDevicesNames, hostDevicesText, hasPartitions, scsiAddresses);
 
         } catch (Exception e) {
-            logger.error("Error listing LUN devices: " + e.getMessage(), e);
             return new ListHostLunDeviceAnswer(false, new ArrayList<>(), new ArrayList<>(), new ArrayList<>(), new ArrayList<>());
         }
     }
@@ -290,23 +298,15 @@ public abstract class ServerResourceBase implements ServerResource {
             java.io.File sysBlock = new java.io.File("/sys/block");
             java.io.File[] entries = sysBlock.listFiles();
             if (entries == null) {
-                logger.debug("No entries found in /sys/block");
                 return null;
             }
 
-            logger.debug("Found " + entries.length + " entries in /sys/block");
 
             // 통합된 디바이스 수집으로 변경
             collectAllLunDevicesUnified(names, texts, hasPartitions, scsiAddresses, scsiAddressCache, realToById);
 
-            logger.debug("Final LUN device count: " + names.size());
-            for (int i = 0; i < names.size(); i++) {
-                logger.debug("LUN device " + i + ": " + names.get(i));
-            }
-
             return new ListHostLunDeviceAnswer(true, names, texts, hasPartitions, scsiAddresses);
         } catch (Exception e) {
-            logger.debug("Fast sysfs scan failed, falling back: " + e.getMessage());
             return null;
         }
     }
@@ -316,16 +316,16 @@ public abstract class ServerResourceBase implements ServerResource {
      */
     private void collectAllLunDevicesUnified(List<String> names, List<String> texts, List<Boolean> hasPartitions,
                                            List<String> scsiAddresses, Map<String, String> scsiAddressCache,
-                                           Map<java.nio.file.Path, String> realToById) {
-        java.io.File sysBlock = new java.io.File("/sys/block");
-        java.io.File[] entries = sysBlock.listFiles();
+                                           Map<Path, String> realToById) {
+        File sysBlock = new File("/sys/block");
+        File[] entries = sysBlock.listFiles();
         if (entries == null) return;
 
         // 중복 제거를 위한 Set
         Set<String> addedDevices = new HashSet<>();
 
         // 1. 직접 디바이스 수집
-        for (java.io.File entry : entries) {
+        for (File entry : entries) {
             String bname = entry.getName();
             if (!(bname.startsWith("sd") || bname.startsWith("vd") || bname.startsWith("xvd") ||
                   bname.startsWith("nvme") || bname.startsWith("dm-"))) {
@@ -352,7 +352,7 @@ public abstract class ServerResourceBase implements ServerResource {
     /**
      * 디바이스를 리스트에 추가하는 공통 메서드
      */
-    private void addDeviceToList(String devPath, String preferred, java.io.File entry,
+    private void addDeviceToList(String devPath, String preferred, File entry,
                                List<String> names, List<String> texts, List<Boolean> hasPartitionsList,
                                List<String> scsiAddresses, Map<String, String> scsiAddressCache, String bname) {
         StringBuilder info = new StringBuilder();
@@ -381,14 +381,12 @@ public abstract class ServerResourceBase implements ServerResource {
             String byIdName = preferred.substring(preferred.lastIndexOf('/') + 1);
             String displayName = devPath + " (" + byIdName + ")";
 
-            logger.debug("Adding LUN device: " + displayName + " (path: " + preferred + ", hasPartitions: " + deviceHasPartitions + ")");
             names.add(displayName);
             texts.add(info.toString());
             hasPartitionsList.add(deviceHasPartitions);
             scsiAddresses.add(scsiAddr != null ? scsiAddr : "");
         } else {
             // ID 값이 없는 경우 리스트에 추가하지 않음
-            logger.debug("Skipping LUN device (no ID): " + devPath + " (preferred: " + preferred + ")");
         }
     }
 
@@ -403,7 +401,7 @@ public abstract class ServerResourceBase implements ServerResource {
             OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
             String result = cmd.execute(parser);
 
-            if (result != null) return;
+            if (result != null || parser.getLines() == null || parser.getLines().trim().isEmpty()) return;
 
             String[] lines = parser.getLines().split("\n");
             for (String line : lines) {
@@ -425,7 +423,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 }
             }
         } catch (Exception e) {
-            logger.debug("Error collecting multipath devices: " + e.getMessage());
         }
     }
 
@@ -460,14 +457,12 @@ public abstract class ServerResourceBase implements ServerResource {
             String byIdName = preferredName.substring(preferredName.lastIndexOf('/') + 1);
             String displayName = devicePath + " (" + byIdName + ")";
 
-            logger.debug("Adding multipath LUN device: " + displayName + " (path: " + preferredName + ", hasPartitions: " + hasPartition + ")");
             names.add(displayName);
             texts.add(deviceInfo.toString());
             hasPartitionsList.add(hasPartition);
             scsiAddresses.add(scsiAddress != null ? scsiAddress : "");
         } else {
             // ID 값이 없는 경우 리스트에 추가하지 않음
-            logger.debug("Skipping multipath LUN device (no ID): " + devicePath + " (preferred: " + preferredName + ")");
         }
     }
 
@@ -490,14 +485,14 @@ public abstract class ServerResourceBase implements ServerResource {
 
         return null;
     }
-    private Map<java.nio.file.Path, String> buildByIdReverseMap() {
-        Map<java.nio.file.Path, String> map = new java.util.HashMap<>();
-        java.nio.file.Path byIdDir = java.nio.file.Paths.get("/dev/disk/by-id");
+    private Map<Path, String> buildByIdReverseMap() {
+        Map<Path, String> map = new HashMap<>();
+        Path byIdDir = Path.of("/dev/disk/by-id");
         try {
-            if (!java.nio.file.Files.isDirectory(byIdDir)) return map;
-            try (java.util.stream.Stream<java.nio.file.Path> s = java.nio.file.Files.list(byIdDir)) {
-                s.filter(java.nio.file.Files::isSymbolicLink).forEach(p -> {
-                    java.nio.file.Path rp = safeRealPath(p);
+            if (!Files.isDirectory(byIdDir)) return map;
+            try (Stream<Path> s = Files.list(byIdDir)) {
+                s.filter(Files::isSymbolicLink).forEach(p -> {
+                    Path rp = safeRealPath(p);
                     if (rp != null) {
                         String byIdPath = byIdDir.resolve(p.getFileName()).toString();
                         map.put(rp, byIdPath);
@@ -510,9 +505,9 @@ public abstract class ServerResourceBase implements ServerResource {
         return map;
     }
 
-    private String resolveById(Map<java.nio.file.Path, String> realToById, String devicePath) {
+    private String resolveById(Map<Path, String> realToById, String devicePath) {
         try {
-            java.nio.file.Path real = java.nio.file.Paths.get(devicePath).toRealPath();
+            Path real = Path.of(devicePath).toRealPath();
             String byId = realToById.get(real);
             if (byId != null) {
                 // LUN 디바이스는 전체 디스크를 사용해야 하므로 파티션 부분 제거
@@ -530,100 +525,65 @@ public abstract class ServerResourceBase implements ServerResource {
         }
     }
 
-    private boolean sysHasPartitions(java.io.File sysBlockEntry) {
+    private boolean sysHasPartitions(File sysBlockEntry) {
         try {
             String name = sysBlockEntry.getName();
-            java.io.File[] children = sysBlockEntry.listFiles();
+            File[] children = sysBlockEntry.listFiles();
             if (children == null) return false;
 
-            logger.debug("Checking partitions for device: " + name);
-            for (java.io.File child : children) {
+            for (File child : children) {
                 String childName = child.getName();
-                logger.debug("Checking child: " + childName);
 
                 // 파티션 디렉토리인지 확인 (예: sda1, sda2 등)
                 if (childName.startsWith(name) && childName.length() > name.length()) {
                     String suffix = childName.substring(name.length());
                     // 숫자로만 구성된 경우 파티션으로 간주
                     if (suffix.matches("\\d+")) {
-                        java.io.File partFile = new java.io.File(child, "partition");
+                        File partFile = new File(child, "partition");
                         if (partFile.exists()) {
-                            logger.debug("Found partition: " + childName);
                             return true;
                         }
                     }
                 }
             }
 
-            // 추가로 lsblk 명령어로도 확인 (예외 처리 강화)
-            try {
-                Script lsblkCmd = new Script("/usr/bin/lsblk");
-                lsblkCmd.add("--json", "--paths", "--output", "NAME,TYPE", "/dev/" + name);
-                OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-                String result = lsblkCmd.execute(parser);
+            // lsblk 명령어는 Stream closed 에러로 인해 비활성화
+            // sysfs 기반 체크만 사용
 
-                if (result == null && parser.getLines() != null) {
-                    try {
-                        JSONObject json = new JSONObject(parser.getLines());
-                        JSONArray blockdevices = json.getJSONArray("blockdevices");
-                        if (blockdevices.length() > 0) {
-                            JSONObject device = blockdevices.getJSONObject(0);
-                            if (device.has("children")) {
-                                JSONArray jsonChildren = device.getJSONArray("children");
-                                for (int i = 0; i < jsonChildren.length(); i++) {
-                                    JSONObject child = jsonChildren.getJSONObject(i);
-                                    String childType = child.optString("type", "");
-                                    if ("part".equals(childType)) {
-                                        logger.debug("Found partition via lsblk: " + child.optString("name", ""));
-                                        return true;
-                                    }
-                                }
-                            }
-                        }
-                    } catch (Exception e) {
-                        logger.debug("Error parsing lsblk output: " + e.getMessage());
-                    }
-                }
-            } catch (Exception e) {
-                logger.debug("Error executing lsblk command for device {}: {}", name, e.getMessage());
-                // lsblk 실패 시 sysfs 기반 결과만 사용
-            }
-
-            logger.debug("No partitions found for device: " + name);
             return false;
         } catch (Exception e) {
-            logger.debug("Error checking partitions for " + sysBlockEntry.getName() + ": " + e.getMessage());
+            // 조용히 처리 (에러 로그 출력 안함)
             return false;
         }
     }
 
-    private String sysGetSizeHuman(java.io.File sysBlockEntry) {
+    private String sysGetSizeHuman(File sysBlockEntry) {
         try {
-            java.io.File sizeFile = new java.io.File(sysBlockEntry, "size");
+            File sizeFile = new File(sysBlockEntry, "size");
             if (!sizeFile.exists()) return null;
-            String content = new String(java.nio.file.Files.readAllBytes(sizeFile.toPath())).trim();
+            String content = new String(Files.readAllBytes(sizeFile.toPath())).trim();
             if (content.isEmpty()) return null;
             long sectors = Long.parseLong(content);
             double gib = (sectors * 512.0) / 1024 / 1024 / 1024;
-            return String.format(java.util.Locale.ROOT, "%.2fG", gib);
+            return String.format(Locale.ROOT, "%.2fG", gib);
         } catch (Exception ignore) {
             return null;
         }
     }
 
     private Map<String, String> getScsiAddressesFromSysfs() {
-        Map<String, String> map = new java.util.HashMap<>();
+        Map<String, String> map = new HashMap<>();
         try {
-            java.io.File sysBlock = new java.io.File("/sys/block");
-            java.io.File[] entries = sysBlock.listFiles();
+            File sysBlock = new File("/sys/block");
+            File[] entries = sysBlock.listFiles();
             if (entries == null) return map;
-            for (java.io.File e : entries) {
+            for (File e : entries) {
                 String name = e.getName();
                 if (!(name.startsWith("sd") || name.startsWith("vd") || name.startsWith("xvd"))) continue;
-                java.nio.file.Path devLink = java.nio.file.Paths.get(e.getAbsolutePath(), "device");
+                Path devLink = Path.of(e.getAbsolutePath(), "device");
                 try {
-                    java.nio.file.Path real = java.nio.file.Files.readSymbolicLink(devLink);
-                    java.nio.file.Path resolved = devLink.getParent().resolve(real).normalize();
+                    Path real = Files.readSymbolicLink(devLink);
+                    Path resolved = devLink.getParent().resolve(real).normalize();
                     String scsi = resolved.getFileName().toString();
                     map.put("/dev/" + name, scsi);
                 } catch (Exception ignore) {}
@@ -654,7 +614,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 String byIdName = preferredName.substring(preferredName.lastIndexOf('/') + 1);
                 String displayName = name + " (" + byIdName + ")";
 
-                logger.debug("Adding LUN device: " + displayName + " (path: " + preferredName + ", hasPartitions: " + hasPartition + ")");
                 names.add(displayName);
                 StringBuilder deviceInfo = new StringBuilder();
                 deviceInfo.append("TYPE: ").append(type);
@@ -674,7 +633,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 scsiAddresses.add(scsiAddress != null ? scsiAddress : "");
             } else {
                 // ID 값이 없는 경우 리스트에 추가하지 않음
-                logger.debug("Skipping LUN device (no ID): " + name + " (preferred: " + preferredName + ")");
             }
         }
 
@@ -697,17 +655,17 @@ public abstract class ServerResourceBase implements ServerResource {
                 return devicePath;
             }
 
-            java.nio.file.Path device = java.nio.file.Paths.get(devicePath).toRealPath();
-            java.nio.file.Path byIdDir = java.nio.file.Paths.get("/dev/disk/by-id");
+            Path device = Path.of(devicePath).toRealPath();
+            Path byIdDir = Path.of("/dev/disk/by-id");
 
-            if (!java.nio.file.Files.isDirectory(byIdDir)) {
+            if (!Files.isDirectory(byIdDir)) {
                 return devicePath;
             }
 
-            try (java.util.stream.Stream<java.nio.file.Path> stream = java.nio.file.Files.list(byIdDir)) {
-                java.util.Optional<String> firstMatch = stream
-                    .filter(java.nio.file.Files::isSymbolicLink)
-                    .map(p -> new java.util.AbstractMap.SimpleEntry<>(p, safeRealPath(p)))
+            try (Stream<Path> stream = Files.list(byIdDir)) {
+                Optional<String> firstMatch = stream
+                    .filter(Files::isSymbolicLink)
+                    .map(p -> new AbstractMap.SimpleEntry<>(p, safeRealPath(p)))
                     .filter(e -> e.getValue() != null && e.getValue().equals(device))
                     .map(e -> byIdDir.resolve(e.getKey().getFileName()).toString())
                     .findFirst();
@@ -727,11 +685,11 @@ public abstract class ServerResourceBase implements ServerResource {
         }
     }
 
-    private java.nio.file.Path safeRealPath(java.nio.file.Path link) {
+    private Path safeRealPath(Path link) {
         try {
-            java.nio.file.Path target = java.nio.file.Files.readSymbolicLink(link);
+            Path target = Files.readSymbolicLink(link);
             // 상대 링크일 수 있음
-            java.nio.file.Path resolved = link.getParent().resolve(target).normalize();
+            Path resolved = link.getParent().resolve(target).normalize();
             return resolved.toRealPath();
         } catch (Exception e) {
             return null;
@@ -792,7 +750,6 @@ public abstract class ServerResourceBase implements ServerResource {
             // 2. /dev/disk/by-id 내부 링크 분류 및 매핑
             dmMap = mapLinksByDm(dmDevices);
         } catch (Exception e) {
-            logger.error("Error getting LUN device UUID mapping: " + e.getMessage(), e);
         }
         return dmMap;
     }
@@ -824,11 +781,9 @@ public abstract class ServerResourceBase implements ServerResource {
                     }
                 }
             } else {
-                logger.warn("Failed to execute multipath -l command: " + result);
             }
 
         } catch (Exception e) {
-            logger.error("Error executing multipath command: " + e.getMessage(), e);
         }
 
         return dmDevices;
@@ -900,7 +855,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 ));
 
         } catch (Exception e) {
-            logger.error("Error mapping links by dm: " + e.getMessage(), e);
         }
 
         return dmMap;
@@ -925,418 +879,17 @@ public abstract class ServerResourceBase implements ServerResource {
             Path target = Files.readSymbolicLink(file.toPath());
             return target.toString();
         } catch (Exception e) {
-            logger.debug("Error reading symbolic link " + file.getPath() + ": " + e.getMessage());
             return null;
         }
     }
 
-    /**
-     * UUID 기반 LUN 디바이스 할당을 위한 XML 생성
-     */
-    protected String generateLunUuidXmlConfig(String devicePath, String uuid, String scsiAddress) {
-        // dm으로 시작하는 디바이스인지 확인
-        boolean isDmDevice = isDmDevice(devicePath);
-
-        if (isDmDevice) {
-            // dm 디바이스는 <disk> 방식 사용 (by-id 대신 실제 디바이스 경로 사용)
-            StringBuilder xml = new StringBuilder();
-            xml.append("<disk type='block' device='lun'>\n");
-            xml.append("  <driver name='qemu' type='raw' cache='none'/>\n");
-
-            // dm 디바이스는 by-id 대신 실제 디바이스 경로 사용
-            String actualDevicePath = getDmDevicePath(devicePath, uuid);
-            xml.append("  <source dev='").append(actualDevicePath).append("'/>\n");
-
-            // 안전한 target dev 할당 (VM에서 사용 중인 dev 제외)
-            String safeTargetDev = findSafeTargetDevForVm(devicePath);
-            xml.append("  <target dev='").append(safeTargetDev).append("' bus='scsi'/>\n");
-
-            if (uuid != null && !uuid.isEmpty()) {
-                xml.append("  <serial>").append(uuid).append("</serial>\n");
-            }
-            xml.append("</disk>");
-            return xml.toString();
-        } else {
-            // 멀티패스 LUN은 <hostdev> 방식 사용
-            return generateMultipathLunXmlConfig(devicePath, uuid);
-        }
-    }
-
-    /**
-     * dm 디바이스인지 확인하는 메서드
-     */
-    private boolean isDmDevice(String devicePath) {
-        if (devicePath == null) return false;
-
-        String lowerDevicePath = devicePath.toLowerCase();
-        return lowerDevicePath.contains("dm-") || lowerDevicePath.contains("dm-uuid-");
-    }
-
-    /**
-     * dm 디바이스를 위한 실제 디바이스 경로를 가져오는 메서드 (by-id 대신)
-     */
-    private String getDmDevicePath(String devicePath, String uuid) {
-        try {
-            // 1. 원본 경로가 /dev/dm-X 형태인지 확인
-            if (devicePath != null && devicePath.startsWith("/dev/dm-")) {
-                return devicePath;
-            }
-
-            // 2. by-id 경로에서 실제 dm-X 경로로 변환
-            if (devicePath != null && devicePath.contains("dm-uuid-")) {
-                // dm-uuid에서 실제 dm-X 경로 찾기
-                String dmUuid = devicePath.split("/")[devicePath.split("/").length - 1];
-                String actualPath = resolveDmUuidToDevice(dmUuid);
-                if (actualPath != null) {
-                    return actualPath;
-                }
-            }
-
-            // 3. UUID로 by-id 경로 생성 후 실제 경로로 변환
-            if (uuid != null && !uuid.isEmpty()) {
-                String byIdPath = "/dev/disk/by-id/" + uuid;
-                String actualPath = resolveByIdToDevice(byIdPath);
-                if (actualPath != null) {
-                    return actualPath;
-                }
-            }
-
-            // 4. 기본 fallback
-            return devicePath != null ? devicePath : "/dev/dm-10";
-
-        } catch (Exception e) {
-            logger.error("Error getting dm device path for {}: {}", devicePath, e.getMessage());
-            return devicePath != null ? devicePath : "/dev/dm-10";
-        }
-    }
-
-    /**
-     * dm-uuid에서 실제 /dev/dm-X 경로로 변환
-     */
-    private String resolveDmUuidToDevice(String dmUuid) {
-        try {
-            Script cmd = new Script("/bin/bash");
-            cmd.add("-c");
-            cmd.add("readlink -f /dev/disk/by-id/" + dmUuid + " 2>/dev/null");
-
-            OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-            String result = cmd.execute(parser);
-
-            if (result == null && parser.getLines() != null && !parser.getLines().trim().isEmpty()) {
-                String resolvedPath = parser.getLines().trim();
-                if (resolvedPath.startsWith("/dev/dm-")) {
-                    return resolvedPath;
-                }
-            }
-        } catch (Exception e) {
-            logger.debug("Failed to resolve dm-uuid {}: {}", dmUuid, e.getMessage());
-        }
-        return null;
-    }
-
-    /**
-     * by-id 경로에서 실제 디바이스 경로로 변환
-     */
-    private String resolveByIdToDevice(String byIdPath) {
-        try {
-            Script cmd = new Script("/bin/bash");
-            cmd.add("-c");
-            cmd.add("readlink -f " + byIdPath + " 2>/dev/null");
-
-            OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-            String result = cmd.execute(parser);
-
-            if (result == null && parser.getLines() != null && !parser.getLines().trim().isEmpty()) {
-                return parser.getLines().trim();
-            }
-        } catch (Exception e) {
-            logger.debug("Failed to resolve by-id path {}: {}", byIdPath, e.getMessage());
-        }
-        return null;
-    }
-
-    /**
-     * VM에서 사용 중인 target dev를 제외하고 안전한 target dev를 찾는 메서드
-     */
-    private String findSafeTargetDevForVm(String devicePath) {
-        try {
-            // 기본적으로 sdd부터 시작 (sdc는 자주 충돌하므로)
-            String[] candidates = {"sdd", "sde", "sdf", "sdg", "sdh", "sdi", "sdj", "sdk", "sdl", "sdm", "sdn", "sdo", "sdp", "sdq", "sdr", "sds", "sdt", "sdu", "sdv", "sdw", "sdx", "sdy", "sdz", "sdc"};
-
-            // VM에서 현재 사용 중인 target dev 목록 가져오기
-            Set<String> usedTargetDevs = getCurrentlyUsedTargetDevs();
-
-            // 사용 가능한 첫 번째 target dev 찾기
-            for (String candidate : candidates) {
-                if (!usedTargetDevs.contains(candidate)) {
-                    return candidate;
-                }
-            }
-
-            // 모든 후보가 사용 중이면 sdd 반환 (fallback)
-            logger.warn("All target dev candidates are in use, using sdd as fallback for device: {}", devicePath);
-            return "sdd";
-
-        } catch (Exception e) {
-            logger.error("Error finding safe target dev for device {}: {}", devicePath, e.getMessage());
-            return "sdd"; // 안전한 fallback
-        }
-    }
-
-    /**
-     * 현재 VM에서 사용 중인 target dev 목록을 가져오는 메서드
-     */
-    private Set<String> getCurrentlyUsedTargetDevs() {
-        Set<String> usedDevs = new HashSet<>();
-        try {
-            // virsh dumpxml을 통해 현재 VM들의 디스크 정보 확인
-            Script cmd = new Script("/bin/bash");
-            cmd.add("-c");
-            cmd.add("virsh list --state-running --name | head -20"); // 실행 중인 VM 목록 (최대 20개)
-
-            OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-            String result = cmd.execute(parser);
-
-            if (result == null && parser.getLines() != null && !parser.getLines().trim().isEmpty()) {
-                String[] vmNames = parser.getLines().trim().split("\n");
-
-                for (String vmName : vmNames) {
-                    if (vmName != null && !vmName.trim().isEmpty()) {
-                        try {
-                            // 각 VM의 XML 덤프에서 target dev 추출
-                            Script dumpCmd = new Script("/bin/bash");
-                            dumpCmd.add("-c");
-                            dumpCmd.add("virsh dumpxml '" + vmName.trim() + "' 2>/dev/null | grep -o \"<target dev='[^']*'\" | sed \"s/<target dev='\\([^']*\\)'/\\1/\" | head -10");
-
-                            OutputInterpreter.AllLinesParser dumpParser = new OutputInterpreter.AllLinesParser();
-                            String dumpResult = dumpCmd.execute(dumpParser);
-
-                            if (dumpResult == null && dumpParser.getLines() != null) {
-                                String[] targetDevs = dumpParser.getLines().trim().split("\n");
-                                for (String targetDev : targetDevs) {
-                                    if (targetDev != null && targetDev.trim().matches("sd[a-z]")) {
-                                        usedDevs.add(targetDev.trim());
-                                    }
-                                }
-                            }
-                        } catch (Exception e) {
-                            logger.debug("Error checking target devs for VM {}: {}", vmName, e.getMessage());
-                        }
-                    }
-                }
-            }
-
-            logger.debug("Currently used target devs: {}", usedDevs);
-            return usedDevs;
-
-        } catch (Exception e) {
-            logger.error("Error getting currently used target devs: {}", e.getMessage());
-            return usedDevs; // 빈 Set 반환
-        }
-    }
-
-    /**
-     * 멀티패스 LUN을 위한 XML 생성
-     */
-    protected String generateMultipathLunXmlConfig(String devicePath, String uuid) {
-        StringBuilder xml = new StringBuilder();
-        xml.append("<hostdev mode='subsystem' type='lun' managed='yes'>\n");
-        xml.append("  <source>\n");
-        xml.append("    <adapter name='scsi_host0'/>\n");
-
-        // 실제 존재하는 디바이스 경로 찾기
-        String actualDevicePath = findActualDevicePath(devicePath, uuid);
-
-        // 동적으로 SCSI 주소 추출
-        String scsiAddress = extractScsiAddressFromDevice(devicePath);
-        if (scsiAddress != null && !scsiAddress.isEmpty()) {
-            xml.append("    ").append(scsiAddress).append("\n");
-        } else {
-            xml.append("    <address type='drive' controller='0' bus='0' target='0' unit='0'/>\n");
-        }
-        xml.append("  </source>\n");
-        xml.append("  <source dev='").append(actualDevicePath).append("'/>\n");
-        xml.append("  <rawio value='yes'/>\n");
-
-        if (uuid != null && !uuid.isEmpty()) {
-            xml.append("  <serial>").append(uuid).append("</serial>\n");
-        }
-        xml.append("</hostdev>");
-        return xml.toString();
-    }
-
-    /**
-     * 디바이스에서 SCSI 주소를 추출하는 메서드
-     */
-    private String extractScsiAddressFromDevice(String devicePath) {
-        try {
-            // sg_inq를 사용하여 SCSI 주소 추출
-            ProcessBuilder pb = new ProcessBuilder("sg_inq", "-i", devicePath);
-            Process process = pb.start();
-
-            StringBuilder output = new StringBuilder();
-            try (java.io.BufferedReader reader = new java.io.BufferedReader(new java.io.InputStreamReader(process.getInputStream()))) {
-                String line;
-                while ((line = reader.readLine()) != null) {
-                    output.append(line).append("\n");
-                }
-            }
-
-            int exitCode = process.waitFor();
-            if (exitCode == 0) {
-                String result = output.toString();
-
-                // SCSI 주소 패턴 찾기 (예: "SCSI Address: 0:0:1:0")
-                java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("SCSI Address:\\s*(\\d+):(\\d+):(\\d+):(\\d+)");
-                java.util.regex.Matcher matcher = pattern.matcher(result);
-
-                if (matcher.find()) {
-                    String host = matcher.group(1);
-                    String bus = matcher.group(2);
-                    String target = matcher.group(3);
-                    String unit = matcher.group(4);
-
-                    return String.format("<address type='drive' controller='%s' bus='%s' target='%s' unit='%s'/>",
-                                       host, bus, target, unit);
-                }
-            }
-        } catch (Exception e) {
-            logger.debug("Failed to extract SCSI address from device {}: {}", devicePath, e.getMessage());
-        }
-
-        return null;
-    }
-
-    /**
-     * 멀티패스 LUN인지 확인하는 메서드
-     */
-    private boolean isMultipathLun(String devicePath) {
-        if (devicePath == null) return false;
-
-        String lowerDevicePath = devicePath.toLowerCase();
-        return lowerDevicePath.contains("mpatha") ||
-               lowerDevicePath.contains("mpathb") ||
-               lowerDevicePath.contains("mpathc") ||
-               lowerDevicePath.contains("mpathd") ||
-               lowerDevicePath.contains("mpathe") ||
-               lowerDevicePath.contains("dm-uuid-mpath-") ||
-               lowerDevicePath.contains("/dev/mapper/mpath");
-    }
-
-    /**
-     * 실제 존재하는 디바이스 경로를 찾는 메서드
-     */
-    private String findActualDevicePath(String devicePath, String uuid) {
-        // 1. 원본 경로가 실제로 존재하는지 확인
-        if (devicePath != null && new File(devicePath).exists()) {
-            return devicePath;
-        }
-
-        // 2. by-id 경로 확인
-        if (devicePath != null && devicePath.startsWith("/dev/disk/by-id/")) {
-            if (new File(devicePath).exists()) {
-                return devicePath;
-            }
-        }
-
-        // 3. dm-uuid 경로 확인
-        if (devicePath != null && devicePath.contains("dm-uuid-")) {
-            String dmUuid = devicePath.split("/")[devicePath.split("/").length - 1];
-            String byIdPath = "/dev/disk/by-id/" + dmUuid;
-            if (new File(byIdPath).exists()) {
-                return byIdPath;
-            }
-        }
-
-        // 4. UUID로 by-id 경로 생성하여 확인
-        if (uuid != null && !uuid.isEmpty()) {
-            String byIdPath = "/dev/disk/by-id/" + uuid;
-            if (new File(byIdPath).exists()) {
-                return byIdPath;
-            }
-
-            // scsi- 접두사 추가하여 확인
-            String scsiByIdPath = "/dev/disk/by-id/scsi-" + uuid;
-            if (new File(scsiByIdPath).exists()) {
-                return scsiByIdPath;
-            }
-        }
-
-        // 5. 원본 경로에서 실제 디바이스 경로 추출
-        if (devicePath != null) {
-            // /dev/dm-X 형태로 변환 시도
-            String baseDevice = devicePath.replace("/dev/disk/by-id/", "/dev/");
-            if (baseDevice.contains("dm-uuid-")) {
-                // dm-uuid를 실제 dm-X로 변환하는 로직 (실제 구현에서는 심볼릭 링크 확인 필요)
-                // 여기서는 기본값으로 fallback
-                return "/dev/dm-10"; // 기본 fallback
-            }
-            return baseDevice;
-        }
-
-        // 6. 최종 fallback
-        return "/dev/dm-10";
-    }
-
-    /**
-     * 디바이스 경로에서 타겟 디바이스명 추출
-     */
-    private String getTargetDeviceName(String devicePath) {
-        String targetDev = "sdc"; // 기본값
-
-        if (devicePath != null && devicePath.startsWith("/dev/")) {
-            String[] parts = devicePath.split("/");
-            if (parts.length > 0) {
-                String deviceName = parts[parts.length - 1];
-                if (deviceName.matches("[a-z]+[a-z0-9]*")) {
-                    // dm-* (multipath) 디바이스는 sdc로, sd*는 그대로 사용
-                    if (deviceName.startsWith("dm-")) {
-                        targetDev = "sdc";
-                    } else if (deviceName.startsWith("sd")) {
-                        targetDev = deviceName;
-                    } else {
-                        targetDev = "sdc";
-                    }
-                }
-            }
-        }
-        return targetDev;
-    }
 
     /**
      * 특정 디바이스의 파티션 여부를 확인하는 메서드
      */
     private boolean hasPartitionRecursiveForDevice(String devicePath) {
-        try {
-            Script cmd = new Script("/usr/bin/lsblk");
-            cmd.add("--json", "--paths", "--output", "NAME,TYPE", devicePath);
-            OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-            String result;
-            try {
-                result = cmd.execute(parser);
-            } catch (Exception e) {
-                logger.debug("Error executing lsblk command for device {}: {}", devicePath, e.getMessage());
-                return false;
-            }
-
-            if (result == null && parser.getLines() != null) {
-                try {
-                    JSONObject json = new JSONObject(parser.getLines());
-                    JSONArray blockdevices = json.getJSONArray("blockdevices");
-
-                    if (blockdevices.length() > 0) {
-                        JSONObject device = blockdevices.getJSONObject(0);
-                        return hasPartitionRecursive(device);
-                    }
-                } catch (Exception e) {
-                    logger.debug("Error parsing lsblk JSON output for device {}: {}", devicePath, e.getMessage());
-                }
-            }
-
-        } catch (Exception e) {
-            logger.debug("Error executing lsblk command for device {}: {}", devicePath, e.getMessage());
-        }
-
+        // lsblk 명령어는 Stream closed 에러로 인해 비활성화
+        // 파티션이 없다고 가정
         return false;
     }
 
@@ -1344,26 +897,8 @@ public abstract class ServerResourceBase implements ServerResource {
      * 디바이스 크기를 가져오는 메서드
      */
     private String getDeviceSize(String devicePath) {
-        try {
-            Script cmd = new Script("/usr/bin/lsblk");
-            cmd.add("--json", "--paths", "--output", "NAME,SIZE", devicePath);
-            OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-            String result = cmd.execute(parser);
-
-            if (result == null) {
-                JSONObject json = new JSONObject(parser.getLines());
-                JSONArray blockdevices = json.getJSONArray("blockdevices");
-
-                if (blockdevices.length() > 0) {
-                    JSONObject device = blockdevices.getJSONObject(0);
-                    return device.optString("size", "");
-                }
-            }
-
-        } catch (Exception e) {
-            logger.debug("Error getting size for device " + devicePath + ": " + e.getMessage());
-        }
-
+        // lsblk 명령어는 Stream closed 에러로 인해 비활성화
+        // 크기 정보 없음
         return null;
     }
 
@@ -1377,16 +912,13 @@ public abstract class ServerResourceBase implements ServerResource {
 
         if ("lvm".equals(deviceType) || deviceName.startsWith("/dev/mapper/")) {
             if (deviceName.contains("ceph--") && deviceName.contains("--osd--block--")) {
-                logger.debug("Ceph OSD device, no partitions: " + deviceName);
                 return false;
             }
-            logger.debug("LVM device, has partitions: " + deviceName);
             return true;
         }
 
         if (device.has("children")) {
             JSONArray children = device.getJSONArray("children");
-            logger.debug("Device has " + children.length() + " children: " + deviceName);
 
             for (int i = 0; i < children.length(); i++) {
                 JSONObject child = children.getJSONObject(i);
@@ -1400,7 +932,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
                 // LVM 볼륨이 있으면 true
                 if ("lvm".equals(childType)) {
-                    logger.debug("Found LVM child: " + childName);
                     return true;
                 }
 
@@ -1409,7 +940,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 }
             }
         } else {
-            logger.debug("Device has no children: " + deviceName);
         }
         return false;
     }
@@ -1444,7 +974,6 @@ public abstract class ServerResourceBase implements ServerResource {
                     }
                 }
             } catch (Exception e) {
-                logger.debug("Error executing lsscsi command in batch: {}", e.getMessage());
             }
 
             // sysfs에서 추가 정보 수집 (lsscsi에서 찾지 못한 디바이스들)
@@ -1473,11 +1002,9 @@ public abstract class ServerResourceBase implements ServerResource {
                     }
                 }
             } catch (Exception e) {
-                logger.debug("Error reading sysfs SCSI addresses: " + e.getMessage());
             }
 
         } catch (Exception e) {
-            logger.debug("Error getting SCSI addresses batch: " + e.getMessage());
         }
 
         return scsiAddressMap;
@@ -1520,7 +1047,6 @@ public abstract class ServerResourceBase implements ServerResource {
                                 }
                             }
                         } catch (Exception e) {
-                            logger.debug("Error processing VM " + vmId + ": " + e.getMessage());
                         }
                     }
                 }
@@ -1544,31 +1070,27 @@ public abstract class ServerResourceBase implements ServerResource {
                     }
                 }
             } catch (Exception e) {
-                logger.debug("Error getting mounted devices: " + e.getMessage());
             }
 
         } catch (Exception e) {
-            logger.debug("Error getting devices in use batch: " + e.getMessage());
         }
 
         return devicesInUse;
     }
 
     private Set<String> getDevicesInUseBatch(long timeoutMs) {
-        java.util.concurrent.atomic.AtomicBoolean timedOut = new java.util.concurrent.atomic.AtomicBoolean(false);
-        java.util.concurrent.ExecutorService es = java.util.concurrent.Executors.newSingleThreadExecutor();
+        AtomicBoolean timedOut = new AtomicBoolean(false);
+        ExecutorService es = Executors.newSingleThreadExecutor();
         try {
-            java.util.concurrent.Future<Set<String>> fut = es.submit(() -> getDevicesInUseBatch());
+            Future<Set<String>> fut = es.submit(() -> getDevicesInUseBatch());
             try {
-                return fut.get(timeoutMs, java.util.concurrent.TimeUnit.MILLISECONDS);
-            } catch (java.util.concurrent.TimeoutException te) {
+                return fut.get(timeoutMs, TimeUnit.MILLISECONDS);
+            } catch (TimeoutException te) {
                 timedOut.set(true);
                 fut.cancel(true);
-                logger.warn("getDevicesInUseBatch timed out after " + timeoutMs + "ms; returning partial/empty set");
                 return new HashSet<>();
             }
         } catch (Exception e) {
-            logger.debug("getDevicesInUseBatch with timeout failed: " + e.getMessage());
             return new HashSet<>();
         } finally {
             es.shutdownNow();
@@ -1580,24 +1102,28 @@ public abstract class ServerResourceBase implements ServerResource {
         try {
             // Ceph OSD 디바이스인지 확인
             if (deviceName.contains("ceph--") && deviceName.contains("--osd--block--")) {
-                logger.debug("Ceph OSD device detected: {}", deviceName);
                 return generateVirtualScsiAddressForCeph(deviceName);
             }
 
             String blockDevice = deviceName.replace("/dev/", "");
 
+            // 괄호가 포함된 경우 (예: "sg5 (lvm-pv-uuid-...)") 기본 디바이스명만 추출
+            if (blockDevice.contains("(")) {
+                blockDevice = blockDevice.substring(0, blockDevice.indexOf("(")).trim();
+            }
+
             String scsiDevicePath = "/sys/block/" + blockDevice + "/device/scsi_device";
+
+            // sysfs 파일 읽기 (Script 대신 직접 파일 읽기로 변경하여 Stream closed 에러 방지)
             try {
-                Script cmd = new Script("/bin/cat");
-                cmd.add(scsiDevicePath);
-                OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-                String result = cmd.execute(parser);
-                if (result == null && parser.getLines() != null && !parser.getLines().isEmpty()) {
-                    String scsiAddress = parser.getLines().trim();
-                    return scsiAddress;
+                File scsiDeviceFile = new File(scsiDevicePath);
+                if (scsiDeviceFile.exists() && scsiDeviceFile.canRead()) {
+                    String scsiAddress = new String(Files.readAllBytes(scsiDeviceFile.toPath())).trim();
+                    if (!scsiAddress.isEmpty()) {
+                        return scsiAddress;
+                    }
                 }
             } catch (Exception e) {
-                logger.debug("Error reading SCSI device file {}: {}", scsiDevicePath, e.getMessage());
             }
 
             try {
@@ -1620,7 +1146,6 @@ public abstract class ServerResourceBase implements ServerResource {
                     }
                 }
             } catch (Exception e) {
-                logger.debug("Error executing lsscsi command for device {}: {}", deviceName, e.getMessage());
             }
 
             return null;
@@ -1672,18 +1197,18 @@ public abstract class ServerResourceBase implements ServerResource {
         try {
             // /sys/block/{device}/device/scsi_device 파일에서 SCSI 주소 읽기
             String scsiDevicePath = "/sys/block/" + deviceName + "/device/scsi_device";
-            Script cmd = new Script("/bin/cat");
-            cmd.add(scsiDevicePath);
-            OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-            String result = cmd.execute(parser);
 
-            if (result == null && parser.getLines() != null && !parser.getLines().isEmpty()) {
-                return parser.getLines().trim();
+            // Script 대신 직접 파일 읽기로 변경하여 Stream closed 에러 방지
+            File scsiDeviceFile = new File(scsiDevicePath);
+            if (scsiDeviceFile.exists() && scsiDeviceFile.canRead()) {
+                String scsiAddress = new String(Files.readAllBytes(scsiDeviceFile.toPath())).trim();
+                if (!scsiAddress.isEmpty()) {
+                    return scsiAddress;
+                }
             }
 
             return null;
         } catch (Exception e) {
-
             return null;
         }
     }
@@ -1701,7 +1226,6 @@ public abstract class ServerResourceBase implements ServerResource {
             xml.append("</device>");
             return xml.toString();
         } catch (Exception e) {
-            logger.error("Error generating basic vHBA XML for parent {}: {}", parentHbaName, e.getMessage());
             return null;
         }
     }
@@ -1731,7 +1255,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return null;
         } catch (Exception e) {
-            logger.error("Error finding vHBA device by WWNN {}: {}", wwnn, e.getMessage());
             return null;
         }
     }
@@ -1789,31 +1312,30 @@ public abstract class ServerResourceBase implements ServerResource {
     // LUN 디바이스가 VM에 할당되어 있는지 확인하는 메서드
     private boolean isLunDeviceAllocatedToVm(String deviceName) {
         try {
-            // virsh list --all로 모든 VM 조회
             Script listCommand = new Script("/bin/bash");
             listCommand.add("-c");
-            listCommand.add("virsh list --all | grep -v 'Id' | grep -v '^-' | while read line; do " +
-                           "vm_id=$(echo $line | awk '{print $1}'); " +
-                           "if [ ! -z \"$vm_id\" ]; then " +
-                           "virsh dumpxml $vm_id | grep -q '" + deviceName + "'; " +
-                           "if [ $? -eq 0 ]; then " +
-                           "echo 'allocated'; " +
-                           "break; " +
-                           "fi; " +
-                           "fi; " +
-                           "done");
+            listCommand.add("virsh list --name | sed '/^$/d'");
             OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
-            String result = listCommand.execute(parser);
-
-            if (result == null && parser.getLines() != null) {
-                boolean isAllocated = parser.getLines().trim().equals("allocated");
-                if (isAllocated) {
+            String listRes = listCommand.execute(parser);
+            if (listRes == null && parser.getLines() != null && !parser.getLines().trim().isEmpty()) {
+                String[] vms = parser.getLines().trim().split("\n");
+                for (String vm : vms) {
+                    vm = vm.trim();
+                    if (vm.isEmpty()) continue;
+                    try {
+                        Script dump = new Script("virsh");
+                        dump.add("dumpxml", vm);
+                        OutputInterpreter.AllLinesParser dp = new OutputInterpreter.AllLinesParser();
+                        String dr = dump.execute(dp);
+                        if (dr == null && dp.getLines() != null) {
+                            String xml = dp.getLines();
+                            if (xml.contains(deviceName)) return true;
+                        }
+                    } catch (Exception ignore) {}
                 }
-                return isAllocated;
             }
             return false;
         } catch (Exception e) {
-            logger.debug("LUN 디바이스 할당 상태 확인 중 오류: " + e.getMessage());
             return false;
         }
     }
@@ -1829,7 +1351,7 @@ public abstract class ServerResourceBase implements ServerResource {
             if (fast != null && fast.getResult()) {
                 return fast;
             }
-            Map<java.nio.file.Path, String> realToById = buildByIdReverseMap();
+            Map<Path, String> realToById = buildByIdReverseMap();
 
             Script cmd = new Script("/usr/bin/lsscsi");
             cmd.add("-g");
@@ -1870,7 +1392,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
             return new com.cloud.agent.api.ListHostScsiDeviceAnswer(true, hostDevicesNames, hostDevicesText, hasPartitions);
         } catch (Exception e) {
-            logger.error("Error listing SCSI devices with lsscsi -g: " + e.getMessage(), e);
             return new com.cloud.agent.api.ListHostScsiDeviceAnswer(false, new ArrayList<>(), new ArrayList<>(), new ArrayList<>());
         }
     }
@@ -1883,10 +1404,10 @@ public abstract class ServerResourceBase implements ServerResource {
 
             // LUN과 동일한 최적화: 배치로 정보 수집
             Map<String, String> scsiAddressCache = getScsiAddressesBatch();
-            Map<java.nio.file.Path, String> realToById = buildByIdReverseMap();
+            Map<Path, String> realToById = buildByIdReverseMap();
 
-            java.io.File sysBlock = new java.io.File("/sys/block");
-            java.io.File[] entries = sysBlock.listFiles();
+            File sysBlock = new File("/sys/block");
+            File[] entries = sysBlock.listFiles();
             if (entries == null) {
                 return null;
             }
@@ -1894,12 +1415,10 @@ public abstract class ServerResourceBase implements ServerResource {
             // 통합된 디바이스 수집 (LUN과 동일한 패턴)
             collectAllScsiDevicesUnified(names, texts, hasPartitions, scsiAddressCache, realToById);
             for (int i = 0; i < names.size(); i++) {
-                logger.debug("SCSI device " + i + ": " + names.get(i));
             }
 
             return new com.cloud.agent.api.ListHostScsiDeviceAnswer(true, names, texts, hasPartitions);
         } catch (Exception ex) {
-            logger.debug("Fast SCSI sysfs scan failed: " + ex.getMessage());
             return null;
         }
     }
@@ -1908,13 +1427,13 @@ public abstract class ServerResourceBase implements ServerResource {
      * 모든 SCSI 디바이스를 통합적으로 수집하는 메서드 (LUN과 동일한 최적화)
      */
     private void collectAllScsiDevicesUnified(List<String> names, List<String> texts, List<Boolean> hasPartitions,
-                                            Map<String, String> scsiAddressCache, Map<java.nio.file.Path, String> realToById) {
+                                            Map<String, String> scsiAddressCache, Map<Path, String> realToById) {
         try {
-            java.io.File sysBlock = new java.io.File("/sys/block");
-            java.io.File[] entries = sysBlock.listFiles();
+            File sysBlock = new File("/sys/block");
+            File[] entries = sysBlock.listFiles();
             if (entries == null) return;
 
-            for (java.io.File e : entries) {
+            for (File e : entries) {
                 String bname = e.getName();
                 if (!(bname.startsWith("sd") || bname.startsWith("vd") || bname.startsWith("xvd"))) {
                     continue;
@@ -1925,8 +1444,8 @@ public abstract class ServerResourceBase implements ServerResource {
                 // sg 매핑
                 String sg = null;
                 try {
-                    java.io.File sgDir = new java.io.File(e, "device/scsi_generic");
-                    java.io.File[] sgs = sgDir.listFiles();
+                    File sgDir = new File(e, "device/scsi_generic");
+                    File[] sgs = sgDir.listFiles();
                     if (sgs != null && sgs.length > 0) {
                         sg = "/dev/" + sgs[0].getName();
                     }
@@ -1936,17 +1455,17 @@ public abstract class ServerResourceBase implements ServerResource {
                 String scsiAddress = scsiAddressCache.get(dev);
                 if (scsiAddress == null) {
                     try {
-                        java.nio.file.Path devLink = java.nio.file.Paths.get(e.getAbsolutePath(), "device");
-                        java.nio.file.Path real = java.nio.file.Files.readSymbolicLink(devLink);
-                        java.nio.file.Path resolved = devLink.getParent().resolve(real).normalize();
+                        Path devLink = Path.of(e.getAbsolutePath(), "device");
+                        Path real = Files.readSymbolicLink(devLink);
+                        Path resolved = devLink.getParent().resolve(real).normalize();
                         scsiAddress = resolved.getFileName().toString();
                     } catch (Exception ignore) {}
                 }
 
                 // 벤더/모델/리비전 (배치 읽기)
-                String vendor = readFirstLineQuiet(new java.io.File(e, "device/vendor"));
-                String model = readFirstLineQuiet(new java.io.File(e, "device/model"));
-                String rev = readFirstLineQuiet(new java.io.File(e, "device/rev"));
+                String vendor = readFirstLineQuiet(new File(e, "device/vendor"));
+                String model = readFirstLineQuiet(new File(e, "device/model"));
+                String rev = readFirstLineQuiet(new File(e, "device/rev"));
 
                 String byId = resolveById(realToById, dev);
 
@@ -1971,14 +1490,13 @@ public abstract class ServerResourceBase implements ServerResource {
                 hasPartitions.add(false);
             }
         } catch (Exception e) {
-            logger.debug("Error collecting SCSI devices unified: " + e.getMessage());
         }
     }
 
-    private String readFirstLineQuiet(java.io.File f) {
+    private String readFirstLineQuiet(File f) {
         try {
             if (!f.exists()) return null;
-            String s = new String(java.nio.file.Files.readAllBytes(f.toPath())).trim();
+            String s = new String(Files.readAllBytes(f.toPath())).trim();
             return s.isEmpty() ? null : s;
         } catch (Exception ignore) {
             return null;
@@ -2028,13 +1546,11 @@ public abstract class ServerResourceBase implements ServerResource {
                         // 해당 scsi_host에 대한 SCSI 주소 정보 저장
                         if (!scsiAddressMap.containsKey(scsiHostName)) {
                             scsiAddressMap.put(scsiHostName, scsiAddress);
-                            logger.debug("Mapped " + scsiHostName + " to SCSI address: " + scsiAddress);
                         }
                     }
                 }
             }
         } catch (Exception e) {
-            logger.debug("SCSI 디바이스 조회 중 오류 발생: " + e.getMessage());
         }
 
         // 2. virsh nodedev-list --cap vports로 vHBA 지원 물리 HBA 조회 (화면에 표시)
@@ -2065,17 +1581,16 @@ public abstract class ServerResourceBase implements ServerResource {
                 }
             }
         } catch (Exception e) {
-            logger.debug("vHBA 지원 HBA 조회 중 오류 발생: " + e.getMessage());
         }
 
         // 3. virsh nodedev-list | grep vhba로 vHBA 추가
         try {
             Script vhbaCommand = new Script("/bin/bash");
             vhbaCommand.add("-c");
-            vhbaCommand.add("virsh nodedev-list | grep vhba");
+            vhbaCommand.add("virsh nodedev-list | grep vhba || true");
             OutputInterpreter.AllLinesParser vhbaParser = new OutputInterpreter.AllLinesParser();
             String vhbaResult = vhbaCommand.execute(vhbaParser);
-            if (vhbaResult == null && vhbaParser.getLines() != null) {
+            if (vhbaResult == null && vhbaParser.getLines() != null && !vhbaParser.getLines().trim().isEmpty()) {
                 String[] vhbaLines = vhbaParser.getLines().split("\\n");
                 for (String vhbaLine : vhbaLines) {
                     String vhbaName = vhbaLine.trim();
@@ -2132,7 +1647,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 }
             }
         } catch (Exception e) {
-            logger.debug("vHBA 조회 중 오류 발생: " + e.getMessage());
         }
         return new ListHostHbaDeviceAnswer(true, hostDevicesNames, hostDevicesText, deviceTypes, parentHbaNames);
     }
@@ -2274,7 +1788,6 @@ public abstract class ServerResourceBase implements ServerResource {
                     try (FileWriter writer = new FileWriter(backupFilePath)) {
                         writer.write(actualVhbaXml);
                     } catch (IOException e) {
-                        logger.warn("vHBA 백업 파일 생성 실패: " + e.getMessage());
                     }
                 } else {
                 }
@@ -2287,7 +1800,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return new com.cloud.agent.api.CreateVhbaDeviceAnswer(true, vhbaName, createdDeviceName);
 
         } catch (Exception e) {
-            logger.error("vHBA 디바이스 생성 중 오류: " + e.getMessage(), e);
             return new com.cloud.agent.api.CreateVhbaDeviceAnswer(false, vhbaName, "vHBA 생성 중 오류: " + e.getMessage());
         }
     }
@@ -2303,12 +1815,10 @@ public abstract class ServerResourceBase implements ServerResource {
             if (wwnn != null && !wwnn.trim().isEmpty()) {
                 targetDeviceName = findVhbaDeviceByWwnn(wwnn);
                 if (targetDeviceName == null) {
-                    logger.error("WWNN으로 vHBA 디바이스를 찾을 수 없습니다: " + wwnn);
                     return new DeleteVhbaDeviceAnswer(command, false, "WWNN으로 vHBA 디바이스를 찾을 수 없습니다: " + wwnn);
                 }
             } else {
                 if (vhbaName == null || vhbaName.trim().isEmpty()) {
-                    logger.error("vHBA 이름이 제공되지 않았습니다");
                     return new DeleteVhbaDeviceAnswer(command, false, "vHBA 이름이 필요합니다");
                 }
                 targetDeviceName = vhbaName;
@@ -2316,7 +1826,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
             // vHBA가 VM에 할당되어 있는지 확인
             if (isVhbaAllocatedToVm(targetDeviceName)) {
-                logger.error("vHBA가 VM에 할당되어 있어 삭제할 수 없습니다: " + targetDeviceName);
                 return new DeleteVhbaDeviceAnswer(command, false, "vHBA가 VM에 할당되어 있어 삭제할 수 없습니다. 먼저 할당을 해제해주세요.");
             }
 
@@ -2328,7 +1837,6 @@ public abstract class ServerResourceBase implements ServerResource {
             String result = destroyCommand.execute(parser);
 
             if (result != null) {
-                logger.error("vHBA 삭제 실패: " + result);
                 return new DeleteVhbaDeviceAnswer(command, false, "vHBA 삭제 실패: " + result);
             }
 
@@ -2344,7 +1852,6 @@ public abstract class ServerResourceBase implements ServerResource {
             if (backupFile.exists()) {
                 if (backupFile.delete()) {
                 } else {
-                    logger.warn("vHBA 백업 파일 삭제 실패: " + backupFilePath);
                 }
             } else {
             }
@@ -2352,7 +1859,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return new DeleteVhbaDeviceAnswer(command, true, "vHBA 디바이스가 성공적으로 삭제되었습니다: " + vhbaName);
 
         } catch (Exception e) {
-            logger.error("vHBA 디바이스 삭제 중 오류: " + e.getMessage(), e);
             return new DeleteVhbaDeviceAnswer(command, false, "vHBA 삭제 중 오류: " + e.getMessage());
         }
     }
@@ -2380,7 +1886,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return false;
         } catch (Exception e) {
-            logger.debug("vHBA 할당 상태 확인 중 오류: " + e.getMessage());
             return false;
         }
     }
@@ -2404,10 +1909,8 @@ public abstract class ServerResourceBase implements ServerResource {
                 }
             }
 
-            logger.warn("부모 HBA가 vports 지원 목록에 없음: " + parentHbaName);
             return false;
         } catch (Exception e) {
-            logger.debug("부모 HBA vports 검증 중 오류: " + e.getMessage());
             return false;
         }
     }
@@ -2430,7 +1933,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
         }
 
-        logger.warn("생성된 디바이스명을 찾을 수 없음. 출력: " + output);
         return null;
     }
 
@@ -2449,7 +1951,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return false;
         } catch (Exception e) {
-            logger.debug("생성된 vHBA 검증 중 오류: " + e.getMessage());
             return false;
         }
     }
@@ -2460,10 +1961,8 @@ public abstract class ServerResourceBase implements ServerResource {
             File xmlFile = new File(xmlFilePath);
             if (xmlFile.exists()) {
                 // xmlFile.delete();
-                logger.debug("임시 XML 파일 삭제: " + xmlFilePath);
             }
         } catch (Exception e) {
-            logger.debug("XML 파일 정리 중 오류: " + e.getMessage());
         }
     }
 
@@ -2499,7 +1998,6 @@ public abstract class ServerResourceBase implements ServerResource {
                         }
                     }
                 } catch (Exception e) {
-                    logger.debug("특정 물리 HBA vHBA 조회 중 오류: " + e.getMessage());
                 }
             } else {
                 try {
@@ -2522,7 +2020,6 @@ public abstract class ServerResourceBase implements ServerResource {
                         }
                     }
                 } catch (Exception e) {
-                    logger.debug("scsi_host 디바이스 조회 중 오류: " + e.getMessage());
                 }
             }
 
@@ -2542,13 +2039,11 @@ public abstract class ServerResourceBase implements ServerResource {
                                 String vhbaName = extractVhbaNameFromPath(vhbaPath);
                                 if (vhbaName != null) {
                                     vhbaNames.add(vhbaName);
-                                    logger.debug("fc_remote_ports에서 발견된 vHBA: " + vhbaName);
                                 }
                             }
                         }
                     }
                 } catch (Exception e) {
-                    logger.debug("fc_remote_ports 조회 중 오류: " + e.getMessage());
                 }
             }
 
@@ -2647,7 +2142,6 @@ public abstract class ServerResourceBase implements ServerResource {
                         }
 
                     } catch (Exception e) {
-                        logger.error("vHBA " + vhbaName + "의 SCSI 주소 추출 중 오류: " + e.getMessage());
                     }
 
                     StringBuilder descBuilder = new StringBuilder();
@@ -2687,19 +2181,8 @@ public abstract class ServerResourceBase implements ServerResource {
                     continue;
                 }
 
-                // vHBA 상태 확인
-                Script statusCommand = new Script("/bin/bash");
-                statusCommand.add("-c");
-                statusCommand.add("virsh nodedev-info " + vhbaName + " | grep State");
-                OutputInterpreter.AllLinesParser statusParser = new OutputInterpreter.AllLinesParser();
-                String statusResult = statusCommand.execute(statusParser);
-
-                if (statusResult == null && statusParser.getLines() != null) {
-                    String statusLine = statusParser.getLines().trim();
-                    if (statusLine.contains("State:")) {
-                        status = statusLine.replaceAll(".*State:\\s*([^\\s]+).*", "$1").trim();
-                    }
-                }
+                // vHBA 상태 확인은 Stream closed 에러 방지를 위해 제거
+                // 기본값인 "Active" 사용
 
                 com.cloud.agent.api.ListVhbaDevicesCommand.VhbaDeviceInfo vhbaInfo =
                     new com.cloud.agent.api.ListVhbaDevicesCommand.VhbaDeviceInfo(
@@ -2711,7 +2194,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return new com.cloud.agent.api.ListVhbaDevicesAnswer(true, vhbaDevices);
 
         } catch (Exception e) {
-            logger.error("vHBA 디바이스 조회 중 오류: " + e.getMessage(), e);
             return new com.cloud.agent.api.ListVhbaDevicesAnswer(false, new ArrayList<>());
         }
     }
@@ -2721,7 +2203,7 @@ public abstract class ServerResourceBase implements ServerResource {
         try {
             Script checkCommand = new Script("/bin/bash");
             checkCommand.add("-c");
-            checkCommand.add("virsh nodedev-dumpxml " + deviceName + " | grep -c 'fc_host'");
+            checkCommand.add("virsh nodedev-dumpxml " + deviceName + " | grep -c 'fc_host' || true");
             OutputInterpreter.AllLinesParser parser = new OutputInterpreter.AllLinesParser();
             String result = checkCommand.execute(parser);
 
@@ -2731,7 +2213,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return false;
         } catch (Exception e) {
-            logger.debug("vHBA 확인 중 오류: " + e.getMessage());
             return false;
         }
     }
@@ -2754,7 +2235,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return null;
         } catch (Exception e) {
-            logger.debug("vHBA 이름 추출 중 오류: " + e.getMessage());
             return null;
         }
     }
@@ -2822,7 +2302,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 }
             }
         } catch (Exception e) {
-            logger.debug("vHBA 지원 HBA 조회 중 오류 발생: " + e.getMessage());
         }
 
         return new ListHostHbaDeviceAnswer(true, hostDevicesNames, hostDevicesText);
@@ -2843,7 +2322,6 @@ public abstract class ServerResourceBase implements ServerResource {
         String cmdout = Script.runSimpleBashScript("rbd -p " + poolPath + " --id " + authUserName + " -m " + host + " -K " + DEFAULT_LOCAL_STORAGE_PATH + poolUuid + " rm " + name);
         if (cmdout == null) {
             logger.debug(cmdout);
-        }else{
         }
         return new ListRbdObjectsAnswer(true, name);
     }
@@ -3171,10 +2649,8 @@ public abstract class ServerResourceBase implements ServerResource {
             if (isAttach) {
                 virshCmd.add("attach-device", vmName, usbXmlPath);
             } else {
-                if (!isUsbDeviceActuallyAttachedToVm(vmName, xmlConfig)) {
-                    logger.warn("USB device is not actually attached to VM: {}. Skipping detach operation.", vmName);
-                    return new UpdateHostUsbDeviceAnswer(true, vmName, xmlConfig, isAttach);
-                }
+                // detach 시도 전에 실제 VM에 해당 디바이스가 붙어있는지 확인
+                // 실제로 붙어있지 않아도 성공으로 처리 (LUN과 동일한 패턴)
                 virshCmd.add("detach-device", vmName, usbXmlPath);
             }
 
@@ -3183,6 +2659,11 @@ public abstract class ServerResourceBase implements ServerResource {
 
             if (result != null) {
                 String action = isAttach ? "attach" : "detach";
+                String lower = result.toLowerCase();
+                // detach 시 "device not found" 에러는 성공으로 처리
+                if (!isAttach && (lower.contains("device not found") || lower.contains("not found"))) {
+                    return new UpdateHostUsbDeviceAnswer(true, vmName, xmlConfig, isAttach);
+                }
                 logger.error("Failed to {} USB device: {}", action, result);
                 return new UpdateHostUsbDeviceAnswer(false, vmName, xmlConfig, isAttach);
             }
@@ -3192,7 +2673,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
         } catch (Exception e) {
             String action = isAttach ? "attaching" : "detaching";
-            logger.error("Error {} USB device: {}", action, e.getMessage(), e);
             return new UpdateHostUsbDeviceAnswer(false, vmName, xmlConfig, isAttach);
         }
     }
@@ -3214,23 +2694,9 @@ public abstract class ServerResourceBase implements ServerResource {
             // 디바이스 경로 추출 및 검증
             String devicePath = extractDevicePathFromLunXml(xmlConfig);
 
-            // dm 디바이스 또는 멀티패스 LUN인지 확인하고 적절한 XML 생성
-            if (devicePath != null && isAttach) {
-                if (isDmDevice(devicePath)) {
-                    // dm 디바이스는 <disk> 방식으로 XML 재생성
-                    String uuid = extractUuidFromLunXml(xmlConfig);
-                    xmlConfig = generateLunUuidXmlConfig(devicePath, uuid, null);
-                } else if (isMultipathLun(devicePath)) {
-                    // 멀티패스 LUN은 <hostdev> 방식으로 XML 재생성
-                    String uuid = extractUuidFromLunXml(xmlConfig);
-                    xmlConfig = generateMultipathLunXmlConfig(devicePath, uuid);
-                }
-            }
-
             if (devicePath != null && isAttach) {
                 // LUN과 SCSI 간 상호 배타적 할당 검증
                 if (isDeviceAllocatedInOtherType(devicePath, vmName, "LUN")) {
-                    logger.warn("Device {} is already allocated as SCSI device in another VM", devicePath);
                     return new UpdateHostLunDeviceAnswer(false, "Device is already allocated as SCSI device in another VM. Please remove it from SCSI allocation first.");
                 }
 
@@ -3242,8 +2708,8 @@ public abstract class ServerResourceBase implements ServerResource {
                         String baseGuess = null;
                         if (hostDeviceName != null && !hostDeviceName.isEmpty()) {
                             // hostDeviceName에서 베이스 경로 추출 (예: "/dev/sdf (scsi-35ace42e4350075fa)" -> "/dev/sdf")
-                            java.util.regex.Pattern hostNamePattern = java.util.regex.Pattern.compile("(/dev/\\S+)");
-                            java.util.regex.Matcher hostNameMatcher = hostNamePattern.matcher(hostDeviceName);
+                            Pattern hostNamePattern = Pattern.compile("(/dev/\\S+)");
+                            Matcher hostNameMatcher = hostNamePattern.matcher(hostDeviceName);
                             if (hostNameMatcher.find()) {
                                 baseGuess = hostNameMatcher.group(1);
                             }
@@ -3251,22 +2717,22 @@ public abstract class ServerResourceBase implements ServerResource {
 
                         // XML에서 베이스 경로 추출 (우선순위 2)
                         if (baseGuess == null) {
-                            java.util.regex.Pattern patternName = java.util.regex.Pattern.compile("(/dev/[^<\\n]+) \\\\(");
-                            java.util.regex.Matcher mName = patternName.matcher(xmlConfig);
+                            Pattern patternName = Pattern.compile("(/dev/[^<\\n]+) \\\\(");
+                            Matcher mName = patternName.matcher(xmlConfig);
                             if (mName.find()) {
                                 baseGuess = mName.group(1);
                             }
                         }
                         if (baseGuess == null) {
                             // table에선 base만 전달된 경우도 있어 괄호가 없을 수 있음
-                            java.util.regex.Matcher mBase = java.util.regex.Pattern.compile("(/dev/\\S+)").matcher(xmlConfig);
+                            Matcher mBase = Pattern.compile("(/dev/\\S+)").matcher(xmlConfig);
                             if (mBase.find()) {
                                 baseGuess = mBase.group(1);
                             }
                         }
                         if (baseGuess == null) {
                             // XML 주석에서 fallback 경로 추출
-                            java.util.regex.Matcher mFallback = java.util.regex.Pattern.compile("<!-- Fallback device path: (/dev/\\S+) -->").matcher(xmlConfig);
+                            Matcher mFallback = Pattern.compile("<!-- Fallback device path: (/dev/\\S+) -->").matcher(xmlConfig);
                             if (mFallback.find()) {
                                 baseGuess = mFallback.group(1);
                             }
@@ -3291,7 +2757,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
                 String validationResult = validateLunDeviceForAttachment(devicePath, vmName);
                 if (validationResult != null) {
-                    logger.error("LUN device validation failed: {}", validationResult);
                     return new UpdateHostLunDeviceAnswer(false, validationResult);
                 }
             }
@@ -3369,7 +2834,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
         } catch (Exception e) {
             String action = isAttach ? "attaching" : "detaching";
-            logger.error("Error {} LUN device: {}", action, e.getMessage(), e);
             return new UpdateHostLunDeviceAnswer(false, vmName, xmlConfig, isAttach, e.getMessage());
         }
     }
@@ -3393,7 +2857,6 @@ public abstract class ServerResourceBase implements ServerResource {
             } else {
                 // detach 시도 전에 실제 VM에 해당 디바이스가 붙어있는지 확인
                 if (!isDeviceActuallyAttachedToVm(vmName, xmlConfig)) {
-                    logger.warn("Device is not actually attached to VM: {}. Skipping detach operation.", vmName);
                     // 실제로 붙어있지 않아도 성공으로 처리 (DB 상태만 정리)
                     return new UpdateHostHbaDeviceAnswer(true, vmName, xmlConfig, isAttach);
                 }
@@ -3414,7 +2877,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
         } catch (Exception e) {
             String action = isAttach ? "attaching" : "detaching";
-            logger.error("Error {} HBA device: {}", action, e.getMessage(), e);
             return new UpdateHostHbaDeviceAnswer(false, vmName, xmlConfig, isAttach);
         }
     }
@@ -3439,7 +2901,6 @@ public abstract class ServerResourceBase implements ServerResource {
             } else {
                 // detach 시도 전에 실제 VM에 해당 디바이스가 붙어있는지 확인
                 if (!isVhbaDeviceActuallyAttachedToVm(vmName, xmlConfig)) {
-                    logger.warn("vHBA device is not actually attached to VM: {}. Skipping detach operation.", vmName);
                     // 실제로 붙어있지 않아도 성공으로 처리 (DB 상태만 정리)
                     return new UpdateHostVhbaDeviceAnswer(true, vhbaDeviceName, vmName, xmlConfig, isAttach);
                 }
@@ -3460,7 +2921,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
         } catch (Exception e) {
             String action = isAttach ? "attaching" : "detaching";
-            logger.error("Error {} vHBA device: {}", action, e.getMessage(), e);
             return new UpdateHostVhbaDeviceAnswer(false, vhbaDeviceName, vmName, xmlConfig, isAttach);
         }
     }
@@ -3478,7 +2938,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
             // SCSI와 LUN 간 상호 배타적 할당 검증
             if (isAttach && isDeviceAllocatedInOtherType(devicePath, vmName, "SCSI")) {
-                logger.warn("Device {} is already allocated as LUN device in another VM", devicePath);
                 return new UpdateHostScsiDeviceAnswer(false, "Device is already allocated as LUN device in another VM. Please remove it from LUN allocation first.");
             }
 
@@ -3498,7 +2957,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 virshCmd.add("attach-device", vmName, scsiXmlPath);
             } else {
                 if (!isScsiDeviceActuallyAttachedToVm(vmName, xmlConfig)) {
-                    logger.warn("SCSI device is not actually attached to VM: {}. Skipping detach operation.", vmName);
                     return new UpdateHostScsiDeviceAnswer(true, vmName, xmlConfig, isAttach);
                 }
                 virshCmd.add("detach-device", vmName, scsiXmlPath);
@@ -3511,7 +2969,6 @@ public abstract class ServerResourceBase implements ServerResource {
                 String action = isAttach ? "attach" : "detach";
                 String lower = result.toLowerCase();
                 if (!isAttach && (lower.contains("device not found") || lower.contains("host scsi device") && lower.contains("not found"))) {
-                    logger.warn("virsh reported device not found during detach; treating as success. Details: {}", result);
                     return new UpdateHostScsiDeviceAnswer(true, vmName, xmlConfig, isAttach);
                 }
                 logger.error("Failed to {} SCSI device: {}", action, result);
@@ -3537,8 +2994,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
                     String lunResult = lunVirshCmd.execute();
                     if (lunResult != null) {
-                        logger.warn("Failed to {} mapped LUN device {}: {}",
-                                   isAttach ? "attach" : "detach", mappedLunDevice, lunResult);
                     } else {
                     }
 
@@ -3555,7 +3010,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
         } catch (Exception e) {
             String action = isAttach ? "attaching" : "detaching";
-            logger.error("Error {} SCSI device: {}", action, e.getMessage(), e);
             return new UpdateHostScsiDeviceAnswer(false, vmName, xmlConfig, isAttach);
         }
     }
@@ -3573,7 +3027,6 @@ public abstract class ServerResourceBase implements ServerResource {
             // 해당 XML 파일이 존재하는지 확인
             File xmlFile = new File(hbaXmlPath);
             if (!xmlFile.exists()) {
-                logger.warn("XML file does not exist for device check: {}", hbaXmlPath);
                 return false;
             }
 
@@ -3584,20 +3037,17 @@ public abstract class ServerResourceBase implements ServerResource {
             String result = dumpCommand.execute(parser);
 
             if (result != null) {
-                logger.warn("Failed to get VM XML for device check: {}", result);
                 return false;
             }
 
             String vmXml = parser.getLines();
             if (vmXml == null || vmXml.isEmpty()) {
-                logger.warn("Empty VM XML for device check");
                 return false;
             }
 
             // XML에서 adapter name 추출
             String adapterName = extractAdapterNameFromXml(xmlConfig);
             if (adapterName == null) {
-                logger.warn("Could not extract adapter name from XML config");
                 return false;
             }
 
@@ -3607,7 +3057,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return deviceFound;
 
         } catch (Exception e) {
-            logger.error("Error checking device attachment for VM: {}", vmName, e);
             return false;
         }
     }
@@ -3616,14 +3065,13 @@ public abstract class ServerResourceBase implements ServerResource {
     private String extractAdapterNameFromXml(String xmlConfig) {
         try {
             // <adapter name='scsi_host14'/> 형태에서 scsi_host14 추출
-            java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("name=['\"]([^'\"]+)['\"]");
-            java.util.regex.Matcher matcher = pattern.matcher(xmlConfig);
+            Pattern pattern = Pattern.compile("name=['\"]([^'\"]+)['\"]");
+            Matcher matcher = pattern.matcher(xmlConfig);
             if (matcher.find()) {
                 return matcher.group(1);
             }
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting adapter name from XML: {}", e.getMessage());
             return null;
         }
     }
@@ -3632,8 +3080,8 @@ public abstract class ServerResourceBase implements ServerResource {
     private String extractDeviceNameFromLunXml(String xmlConfig) {
         try {
             // <source dev='/dev/sdc'/> 형태에서 sdc 추출
-            java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("dev=['\"]([^'\"]+)['\"]");
-            java.util.regex.Matcher matcher = pattern.matcher(xmlConfig);
+            Pattern pattern = Pattern.compile("dev=['\"]([^'\"]+)['\"]");
+            Matcher matcher = pattern.matcher(xmlConfig);
             if (matcher.find()) {
                 String devicePath = matcher.group(1);
                 // 경로에서 디바이스 이름만 추출
@@ -3644,7 +3092,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting device name from LUN XML: {}", e.getMessage());
             return null;
         }
     }
@@ -3653,14 +3100,13 @@ public abstract class ServerResourceBase implements ServerResource {
     private String extractDevicePathFromLunXml(String xmlConfig) {
         try {
             // <source dev='/dev/sdc'/> 형태에서 전체 경로 추출
-            java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("dev=['\"]([^'\"]+)['\"]");
-            java.util.regex.Matcher matcher = pattern.matcher(xmlConfig);
+            Pattern pattern = Pattern.compile("dev=['\"]([^'\"]+)['\"]");
+            Matcher matcher = pattern.matcher(xmlConfig);
             if (matcher.find()) {
                 return matcher.group(1);
             }
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting device path from LUN XML: {}", e.getMessage());
             return null;
         }
     }
@@ -3668,14 +3114,13 @@ public abstract class ServerResourceBase implements ServerResource {
     private String extractUuidFromLunXml(String xmlConfig) {
         try {
             // <serial>WWN</serial> 형태에서 UUID 추출
-            java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("<serial>([^<]+)</serial>");
-            java.util.regex.Matcher matcher = pattern.matcher(xmlConfig);
+            Pattern pattern = Pattern.compile("<serial>([^<]+)</serial>");
+            Matcher matcher = pattern.matcher(xmlConfig);
             if (matcher.find()) {
                 return matcher.group(1);
             }
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting UUID from LUN XML: {}", e.getMessage());
             return null;
         }
     }
@@ -3739,7 +3184,6 @@ public abstract class ServerResourceBase implements ServerResource {
 
             return null; // 검증 통과
         } catch (Exception e) {
-            logger.error("LUN device validation error: {}", e.getMessage(), e);
             return "디바이스 검증 중 오류가 발생했습니다: " + e.getMessage();
         }
     }
@@ -3752,21 +3196,20 @@ public abstract class ServerResourceBase implements ServerResource {
         }
 
         try {
-            java.io.File device = new java.io.File(devicePath);
+            File device = new File(devicePath);
             if (!device.exists()) {
                 return false;
             }
 
             // 심볼릭 링크인 경우 실제 타겟 확인
-            if (java.nio.file.Files.isSymbolicLink(device.toPath())) {
+            if (Files.isSymbolicLink(device.toPath())) {
                 try {
-                    java.nio.file.Path realPath = device.toPath().toRealPath();
-                    java.io.File realDevice = realPath.toFile();
+                    Path realPath = device.toPath().toRealPath();
+                    File realDevice = realPath.toFile();
                     if (!realDevice.exists()) {
                         return false;
                     }
                 } catch (Exception e) {
-                    logger.debug("Error resolving symbolic link {}: {}", devicePath, e.getMessage());
                     return false;
                 }
             }
@@ -3795,7 +3238,7 @@ public abstract class ServerResourceBase implements ServerResource {
     private boolean isPartitionDevice(String devicePath) {
         try {
             // /dev/sda1, /dev/sdb2 등 파티션 번호가 있는지 확인
-            String deviceName = new java.io.File(devicePath).getName();
+            String deviceName = new File(devicePath).getName();
 
             // 숫자로 끝나는 디바이스명이 파티션인지 확인
             if (deviceName.matches(".*\\d+$")) {
@@ -3989,14 +3432,13 @@ public abstract class ServerResourceBase implements ServerResource {
     private String extractDeviceNameFromScsiXml(String xmlConfig) {
         try {
             // <adapter name='scsi_host14'/> 형태에서 scsi_host14 추출
-            java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("name=['\"]([^'\"]+)['\"]");
-            java.util.regex.Matcher matcher = pattern.matcher(xmlConfig);
+            Pattern pattern = Pattern.compile("name=['\"]([^'\"]+)['\"]");
+            Matcher matcher = pattern.matcher(xmlConfig);
             if (matcher.find()) {
                 return matcher.group(1);
             }
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting device name from SCSI XML: {}", e.getMessage());
             return null;
         }
     }
@@ -4014,7 +3456,6 @@ public abstract class ServerResourceBase implements ServerResource {
             // 해당 XML 파일이 존재하는지 확인
             File xmlFile = new File(scsiXmlPath);
             if (!xmlFile.exists()) {
-                logger.warn("XML file does not exist for device check: {}", scsiXmlPath);
                 return false;
             }
 
@@ -4025,20 +3466,17 @@ public abstract class ServerResourceBase implements ServerResource {
             String result = dumpCommand.execute(parser);
 
             if (result != null) {
-                logger.warn("Failed to get VM XML for device check: {}", result);
                 return false;
             }
 
             String vmXml = parser.getLines();
             if (vmXml == null || vmXml.isEmpty()) {
-                logger.warn("Empty VM XML for device check");
                 return false;
             }
 
             // XML에서 adapter name 추출
             String adapterName = extractDeviceNameFromScsiXml(xmlConfig);
             if (adapterName == null) {
-                logger.warn("Could not extract adapter name from XML config");
                 return false;
             }
 
@@ -4049,7 +3487,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return deviceFound;
 
         } catch (Exception e) {
-            logger.error("Error checking SCSI device attachment for VM: {}", vmName, e);
             return false;
         }
     }
@@ -4057,21 +3494,20 @@ public abstract class ServerResourceBase implements ServerResource {
     // vHBA XML에서 디바이스 이름 추출
     private String extractDeviceNameFromVhbaXml(String xmlConfig) {
         try {
-            java.util.regex.Pattern parentPattern = java.util.regex.Pattern.compile("<parent>([^<]+)</parent>");
-            java.util.regex.Matcher parentMatcher = parentPattern.matcher(xmlConfig);
+            Pattern parentPattern = Pattern.compile("<parent>([^<]+)</parent>");
+            Matcher parentMatcher = parentPattern.matcher(xmlConfig);
             if (parentMatcher.find()) {
                 return parentMatcher.group(1);
             }
 
-            java.util.regex.Pattern adapterPattern = java.util.regex.Pattern.compile("<adapter\\s+name=['\"]([^'\"]+)['\"][^>]*?>");
-            java.util.regex.Matcher adapterMatcher = adapterPattern.matcher(xmlConfig);
+            Pattern adapterPattern = Pattern.compile("<adapter\\s+name=['\"]([^'\"]+)['\"][^>]*?>");
+            Matcher adapterMatcher = adapterPattern.matcher(xmlConfig);
             if (adapterMatcher.find()) {
                 return adapterMatcher.group(1);
             }
 
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting device name from vHBA XML: {}", e.getMessage());
             return null;
         }
     }
@@ -4085,13 +3521,11 @@ public abstract class ServerResourceBase implements ServerResource {
             String result = dumpCommand.execute(parser);
 
             if (result != null) {
-                logger.warn("Failed to get VM XML for USB device check: {}", result);
                 return false;
             }
 
             String vmXml = parser.getLines();
             if (vmXml == null || vmXml.isEmpty()) {
-                logger.warn("Empty VM XML for USB device check");
                 return false;
             }
 
@@ -4099,7 +3533,6 @@ public abstract class ServerResourceBase implements ServerResource {
             String deviceMatch = extractDeviceFromUsbXml(xmlConfig);
 
             if (busMatch == null || deviceMatch == null) {
-                logger.warn("Could not extract bus/device from USB XML config");
                 return false;
             }
             boolean deviceFound = vmXml.contains("bus='" + busMatch + "'") &&
@@ -4108,7 +3541,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return deviceFound;
 
         } catch (Exception e) {
-            logger.error("Error checking USB device attachment for VM: {}", vmName, e);
             return false;
         }
     }
@@ -4127,7 +3559,6 @@ public abstract class ServerResourceBase implements ServerResource {
             // 해당 XML 파일이 존재하는지 확인
             File xmlFile = new File(vhbaXmlPath);
             if (!xmlFile.exists()) {
-                logger.warn("XML file does not exist for device check: {}", vhbaXmlPath);
                 return false;
             }
 
@@ -4138,20 +3569,17 @@ public abstract class ServerResourceBase implements ServerResource {
             String result = dumpCommand.execute(parser);
 
             if (result != null) {
-                logger.warn("Failed to get VM XML for device check: {}", result);
                 return false;
             }
 
             String vmXml = parser.getLines();
             if (vmXml == null || vmXml.isEmpty()) {
-                logger.warn("Empty VM XML for device check");
                 return false;
             }
 
             // XML에서 대상 이름 추출 (parent 또는 adapter name)
             String targetName = extractDeviceNameFromVhbaXml(xmlConfig);
             if (targetName == null) {
-                logger.warn("Could not extract device/parent name from XML config");
                 return false;
             }
 
@@ -4163,7 +3591,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return deviceFound;
 
         } catch (Exception e) {
-            logger.error("Error checking vHBA device attachment for VM: {}", vmName, e);
             return false;
         }
     }
@@ -4177,7 +3604,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting bus from USB XML: {}", e.getMessage());
             return null;
         }
     }
@@ -4192,7 +3618,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return null;
         } catch (Exception e) {
-            logger.debug("Error extracting device from USB XML: {}", e.getMessage());
             return null;
         }
     }
@@ -4207,15 +3632,14 @@ public abstract class ServerResourceBase implements ServerResource {
             };
 
             for (String pattern : patterns) {
-                java.util.regex.Pattern p = java.util.regex.Pattern.compile(pattern);
-                java.util.regex.Matcher m = p.matcher(xmlContent);
+                Pattern p = Pattern.compile(pattern);
+                Matcher m = p.matcher(xmlContent);
                 if (m.find()) {
                     return m.group(1);
                 }
             }
             return null;
         } catch (Exception e) {
-            logger.debug("XML에서 WWNN 추출 실패: " + e.getMessage());
             return null;
         }
     }
@@ -4243,7 +3667,6 @@ public abstract class ServerResourceBase implements ServerResource {
             return new Answer(null, true, "vHBA 백업 파일 목록: " + String.join(", ", backupList));
 
         } catch (Exception e) {
-            logger.error("vHBA 백업 파일 목록 조회 중 오류: " + e.getMessage(), e);
             return new Answer(null, false, "vHBA 백업 파일 목록 조회 중 오류: " + e.getMessage());
         }
     }
@@ -4261,11 +3684,9 @@ public abstract class ServerResourceBase implements ServerResource {
                 String xmlContent = parser.getLines();
                 return xmlContent;
             } else {
-                logger.warn("vHBA dumpxml 가져오기 실패: " + vhbaName + " - " + result);
                 return null;
             }
         } catch (Exception e) {
-            logger.error("vHBA dumpxml 가져오기 중 오류: " + e.getMessage(), e);
             return null;
         }
     }
@@ -4373,17 +3794,17 @@ public abstract class ServerResourceBase implements ServerResource {
     private String resolvePhysicalDeviceFromScsiAddress(String scsiAddress) {
         try {
             // /sys/class/scsi_device에서 SCSI 주소로 디바이스 찾기
-            java.io.File scsiClassDir = new java.io.File("/sys/class/scsi_device");
-            java.io.File[] scsiDevices = scsiClassDir.listFiles();
+            File scsiClassDir = new File("/sys/class/scsi_device");
+            File[] scsiDevices = scsiClassDir.listFiles();
 
             if (scsiDevices != null) {
-                for (java.io.File scsiDevice : scsiDevices) {
+                for (File scsiDevice : scsiDevices) {
                     String deviceName = scsiDevice.getName();
                     if (deviceName.equals(scsiAddress)) {
                         // device/block 디렉토리에서 실제 블록 디바이스 찾기
-                        java.io.File blockDir = new java.io.File(scsiDevice, "device/block");
+                        File blockDir = new File(scsiDevice, "device/block");
                         if (blockDir.exists()) {
-                            java.io.File[] blockDevices = blockDir.listFiles();
+                            File[] blockDevices = blockDir.listFiles();
                             if (blockDevices != null && blockDevices.length > 0) {
                                 String blockDeviceName = blockDevices[0].getName();
                                 return "/dev/" + blockDeviceName;
@@ -4489,7 +3910,6 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             return false;
         } catch (Exception e) {
-            logger.debug("Error checking SCSI device allocation: " + e.getMessage());
             return false;
         }
     }
@@ -4626,7 +4046,7 @@ public abstract class ServerResourceBase implements ServerResource {
     }
 
     private Set<String> getUsedScsiTargetDevs(String vmName) {
-        java.util.HashSet<String> used = new java.util.HashSet<>();
+        HashSet<String> used = new HashSet<>();
         try {
             Script virshDump = new Script("virsh");
             virshDump.add("dumpxml", vmName);
@@ -4635,14 +4055,13 @@ public abstract class ServerResourceBase implements ServerResource {
             if (res == null) {
                 String xml = parser.getLines();
                 if (xml != null) {
-                    java.util.regex.Matcher m = java.util.regex.Pattern.compile("<target\\s+dev='(sd[a-z]+)'\\s+bus='scsi'").matcher(xml);
+                    Matcher m = Pattern.compile("<target\\s+dev='(sd[a-z]+)'\\s+bus='scsi'").matcher(xml);
                     while (m.find()) {
                         used.add(m.group(1));
                     }
                 }
             }
         } catch (Exception e) {
-            logger.debug("Failed to collect used SCSI target devs: " + e.getMessage());
         }
         return used;
     }
@@ -4664,7 +4083,7 @@ public abstract class ServerResourceBase implements ServerResource {
 
     private String ensureUniqueLunTargetDev(String vmName, String xmlConfig) {
         try {
-            java.util.regex.Matcher m = java.util.regex.Pattern.compile("<target\\s+dev='(sd[a-z]+)'\\s+bus='scsi'\\s*/?>").matcher(xmlConfig);
+            Matcher m = Pattern.compile("<target\\s+dev='(sd[a-z]+)'\\s+bus='scsi'\\s*/?>").matcher(xmlConfig);
             String current = null;
             if (m.find()) {
                 current = m.group(1);
@@ -4677,11 +4096,10 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             if (used.contains(current)) {
                 String chosen = pickAvailableScsiTargetDev(used);
-                return xmlConfig.replaceFirst("dev='" + java.util.regex.Pattern.quote(current) + "'", "dev='" + chosen + "'");
+                return xmlConfig.replaceFirst("dev='" + Pattern.quote(current) + "'", "dev='" + chosen + "'");
             }
             return xmlConfig;
         } catch (Exception e) {
-            logger.debug("Failed to ensure unique target dev: " + e.getMessage());
             return xmlConfig;
         }
     }
@@ -4699,7 +4117,7 @@ public abstract class ServerResourceBase implements ServerResource {
             }
             Path byIdDir = Path.of("/dev/disk/by-id");
             if (!Files.isDirectory(byIdDir)) return null;
-            try (java.nio.file.DirectoryStream<Path> stream = Files.newDirectoryStream(byIdDir)) {
+            try (DirectoryStream<Path> stream = Files.newDirectoryStream(byIdDir)) {
                 for (Path entry : stream) {
                     try {
                         if (Files.isSymbolicLink(entry)) {
@@ -4725,9 +4143,7 @@ public abstract class ServerResourceBase implements ServerResource {
                 }
             }
         } catch (Exception e) {
-            logger.debug("findExistingByIdForBaseDevice error: " + e.getMessage());
         }
         return null;
     }
 }
-
